--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.6.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "4.0.3",
+    "routes": "^2.1.0",
+    "switch": "^0.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
